storage-service/src/main/scala/org/trancemountain/storageservice/repository/search/parser/antlr/TMQLParser.java
// Generated from /Users/michaelcoddington/IdeaProjects/Trance Mountain/trance-mountain-storage-service/src/main/resources/tmql/TMQL.g4 by ANTLR 4.5.3
package org.trancemountain.storageservice.repository.search.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TMQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, SELECT=16, 
		FROM=17, FILTER=18, JOIN=19, BOOLEAN_NOT=20, BOOLEAN_AND=21, BOOLEAN_OR=22, 
		OPEN_PAREN=23, CLOSE_PAREN=24, UNARY_COMPARISON_OPERATOR=25, BINARY_COMPARISON_OPERATOR=26, 
		PROPERTY_FUNCTION=27, IDENTIFIER=28, NUMBER=29, ANY_VAL=30, QUOTED_VAL=31, 
		WS=32;
	public static final int
		RULE_selectStatement = 0, RULE_identifierList = 1, RULE_nodeTypeIdentifier = 2, 
		RULE_aliasedNodeTypeIdentifierSequence = 3, RULE_aliasedNodeTypeIdentifier = 4, 
		RULE_filterStatement = 5, RULE_filterOrPredicate = 6, RULE_filterAndPredicate = 7, 
		RULE_filterNotPredicate = 8, RULE_filterBasePredicate = 9, RULE_filterPropertyUnaryClause = 10, 
		RULE_filterPropertyBinaryClause = 11, RULE_filterPropertyUnaryFunctionClause = 12, 
		RULE_filterPropertyBinaryFunctionClause = 13, RULE_joinStatement = 14, 
		RULE_joinOrPredicate = 15, RULE_joinAndPredicate = 16, RULE_joinNotPredicate = 17, 
		RULE_joinBasePredicate = 18, RULE_joinCriteria = 19;
	public static final String[] ruleNames = {
		"selectStatement", "identifierList", "nodeTypeIdentifier", "aliasedNodeTypeIdentifierSequence", 
		"aliasedNodeTypeIdentifier", "filterStatement", "filterOrPredicate", "filterAndPredicate", 
		"filterNotPredicate", "filterBasePredicate", "filterPropertyUnaryClause", 
		"filterPropertyBinaryClause", "filterPropertyUnaryFunctionClause", "filterPropertyBinaryFunctionClause", 
		"joinStatement", "joinOrPredicate", "joinAndPredicate", "joinNotPredicate", 
		"joinBasePredicate", "joinCriteria"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'*'", "','", "':'", "'.'", "'()'", "'parentOf'", "'ancestorOf'", 
		"'childOf'", "'descendantOf'", "'siblingOf'", "'strongRefTo'", "'weakRefTo'", 
		"'strongRefFrom'", "'weakRefFrom'", "'at'", null, null, null, null, null, 
		null, null, "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "SELECT", "FROM", "FILTER", "JOIN", "BOOLEAN_NOT", 
		"BOOLEAN_AND", "BOOLEAN_OR", "OPEN_PAREN", "CLOSE_PAREN", "UNARY_COMPARISON_OPERATOR", 
		"BINARY_COMPARISON_OPERATOR", "PROPERTY_FUNCTION", "IDENTIFIER", "NUMBER", 
		"ANY_VAL", "QUOTED_VAL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TMQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TMQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(TMQLParser.SELECT, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode FROM() { return getToken(TMQLParser.FROM, 0); }
		public AliasedNodeTypeIdentifierSequenceContext aliasedNodeTypeIdentifierSequence() {
			return getRuleContext(AliasedNodeTypeIdentifierSequenceContext.class,0);
		}
		public FilterStatementContext filterStatement() {
			return getRuleContext(FilterStatementContext.class,0);
		}
		public List<JoinStatementContext> joinStatement() {
			return getRuleContexts(JoinStatementContext.class);
		}
		public JoinStatementContext joinStatement(int i) {
			return getRuleContext(JoinStatementContext.class,i);
		}
		public SelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitSelectStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectStatementContext selectStatement() throws RecognitionException {
		SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_selectStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(SELECT);
			setState(41);
			identifierList();
			setState(42);
			match(FROM);
			setState(43);
			aliasedNodeTypeIdentifierSequence();
			setState(45);
			_la = _input.LA(1);
			if (_la==FILTER) {
				{
				setState(44);
				filterStatement();
				}
			}

			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JOIN) {
				{
				{
				setState(47);
				joinStatement();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
	 
		public IdentifierListContext() { }
		public void copyFrom(IdentifierListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NamedIDsContext extends IdentifierListContext {
		public Token IDENTIFIER;
		public List<Token> ids = new ArrayList<Token>();
		public List<TerminalNode> IDENTIFIER() { return getTokens(TMQLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(TMQLParser.IDENTIFIER, i);
		}
		public NamedIDsContext(IdentifierListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitNamedIDs(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WildcardIDContext extends IdentifierListContext {
		public WildcardIDContext(IdentifierListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitWildcardID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifierList);
		int _la;
		try {
			setState(62);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new WildcardIDContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				match(T__0);
				}
				break;
			case IDENTIFIER:
				_localctx = new NamedIDsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				((NamedIDsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				((NamedIDsContext)_localctx).ids.add(((NamedIDsContext)_localctx).IDENTIFIER);
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(55);
					match(T__1);
					setState(56);
					((NamedIDsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					((NamedIDsContext)_localctx).ids.add(((NamedIDsContext)_localctx).IDENTIFIER);
					}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeTypeIdentifierContext extends ParserRuleContext {
		public Token namespace;
		public Token name;
		public Token version;
		public List<TerminalNode> IDENTIFIER() { return getTokens(TMQLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(TMQLParser.IDENTIFIER, i);
		}
		public TerminalNode NUMBER() { return getToken(TMQLParser.NUMBER, 0); }
		public NodeTypeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeTypeIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitNodeTypeIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeTypeIdentifierContext nodeTypeIdentifier() throws RecognitionException {
		NodeTypeIdentifierContext _localctx = new NodeTypeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nodeTypeIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			((NodeTypeIdentifierContext)_localctx).namespace = match(IDENTIFIER);
			setState(65);
			match(T__2);
			setState(66);
			((NodeTypeIdentifierContext)_localctx).name = match(IDENTIFIER);
			setState(69);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(67);
				match(T__2);
				setState(68);
				((NodeTypeIdentifierContext)_localctx).version = match(NUMBER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasedNodeTypeIdentifierSequenceContext extends ParserRuleContext {
		public List<AliasedNodeTypeIdentifierContext> aliasedNodeTypeIdentifier() {
			return getRuleContexts(AliasedNodeTypeIdentifierContext.class);
		}
		public AliasedNodeTypeIdentifierContext aliasedNodeTypeIdentifier(int i) {
			return getRuleContext(AliasedNodeTypeIdentifierContext.class,i);
		}
		public AliasedNodeTypeIdentifierSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasedNodeTypeIdentifierSequence; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitAliasedNodeTypeIdentifierSequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AliasedNodeTypeIdentifierSequenceContext aliasedNodeTypeIdentifierSequence() throws RecognitionException {
		AliasedNodeTypeIdentifierSequenceContext _localctx = new AliasedNodeTypeIdentifierSequenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_aliasedNodeTypeIdentifierSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			aliasedNodeTypeIdentifier();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(72);
				match(T__1);
				setState(73);
				aliasedNodeTypeIdentifier();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasedNodeTypeIdentifierContext extends ParserRuleContext {
		public NodeTypeIdentifierContext nodetype;
		public Token identifier;
		public NodeTypeIdentifierContext nodeTypeIdentifier() {
			return getRuleContext(NodeTypeIdentifierContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(TMQLParser.IDENTIFIER, 0); }
		public AliasedNodeTypeIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasedNodeTypeIdentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitAliasedNodeTypeIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AliasedNodeTypeIdentifierContext aliasedNodeTypeIdentifier() throws RecognitionException {
		AliasedNodeTypeIdentifierContext _localctx = new AliasedNodeTypeIdentifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_aliasedNodeTypeIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((AliasedNodeTypeIdentifierContext)_localctx).nodetype = nodeTypeIdentifier();
			setState(81);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(80);
				((AliasedNodeTypeIdentifierContext)_localctx).identifier = match(IDENTIFIER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterStatementContext extends ParserRuleContext {
		public TerminalNode FILTER() { return getToken(TMQLParser.FILTER, 0); }
		public FilterOrPredicateContext filterOrPredicate() {
			return getRuleContext(FilterOrPredicateContext.class,0);
		}
		public FilterStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitFilterStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterStatementContext filterStatement() throws RecognitionException {
		FilterStatementContext _localctx = new FilterStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_filterStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(FILTER);
			setState(84);
			filterOrPredicate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterOrPredicateContext extends ParserRuleContext {
		public List<FilterAndPredicateContext> filterAndPredicate() {
			return getRuleContexts(FilterAndPredicateContext.class);
		}
		public FilterAndPredicateContext filterAndPredicate(int i) {
			return getRuleContext(FilterAndPredicateContext.class,i);
		}
		public List<TerminalNode> BOOLEAN_OR() { return getTokens(TMQLParser.BOOLEAN_OR); }
		public TerminalNode BOOLEAN_OR(int i) {
			return getToken(TMQLParser.BOOLEAN_OR, i);
		}
		public FilterOrPredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterOrPredicate; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitFilterOrPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterOrPredicateContext filterOrPredicate() throws RecognitionException {
		FilterOrPredicateContext _localctx = new FilterOrPredicateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_filterOrPredicate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			filterAndPredicate();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BOOLEAN_OR) {
				{
				{
				setState(87);
				match(BOOLEAN_OR);
				setState(88);
				filterAndPredicate();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterAndPredicateContext extends ParserRuleContext {
		public List<FilterNotPredicateContext> filterNotPredicate() {
			return getRuleContexts(FilterNotPredicateContext.class);
		}
		public FilterNotPredicateContext filterNotPredicate(int i) {
			return getRuleContext(FilterNotPredicateContext.class,i);
		}
		public List<TerminalNode> BOOLEAN_AND() { return getTokens(TMQLParser.BOOLEAN_AND); }
		public TerminalNode BOOLEAN_AND(int i) {
			return getToken(TMQLParser.BOOLEAN_AND, i);
		}
		public FilterAndPredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterAndPredicate; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitFilterAndPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterAndPredicateContext filterAndPredicate() throws RecognitionException {
		FilterAndPredicateContext _localctx = new FilterAndPredicateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_filterAndPredicate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			filterNotPredicate();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BOOLEAN_AND) {
				{
				{
				setState(95);
				match(BOOLEAN_AND);
				setState(96);
				filterNotPredicate();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterNotPredicateContext extends ParserRuleContext {
		public Token notFlag;
		public FilterBasePredicateContext filterBasePredicate() {
			return getRuleContext(FilterBasePredicateContext.class,0);
		}
		public TerminalNode BOOLEAN_NOT() { return getToken(TMQLParser.BOOLEAN_NOT, 0); }
		public FilterNotPredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterNotPredicate; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitFilterNotPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterNotPredicateContext filterNotPredicate() throws RecognitionException {
		FilterNotPredicateContext _localctx = new FilterNotPredicateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_filterNotPredicate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_la = _input.LA(1);
			if (_la==BOOLEAN_NOT) {
				{
				setState(102);
				((FilterNotPredicateContext)_localctx).notFlag = match(BOOLEAN_NOT);
				}
			}

			setState(105);
			filterBasePredicate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterBasePredicateContext extends ParserRuleContext {
		public FilterBasePredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterBasePredicate; }
	 
		public FilterBasePredicateContext() { }
		public void copyFrom(FilterBasePredicateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GroupFilterPredicateContext extends FilterBasePredicateContext {
		public TerminalNode OPEN_PAREN() { return getToken(TMQLParser.OPEN_PAREN, 0); }
		public FilterOrPredicateContext filterOrPredicate() {
			return getRuleContext(FilterOrPredicateContext.class,0);
		}
		public TerminalNode CLOSE_PAREN() { return getToken(TMQLParser.CLOSE_PAREN, 0); }
		public GroupFilterPredicateContext(FilterBasePredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitGroupFilterPredicate(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SimpleFilterPredicateContext extends FilterBasePredicateContext {
		public FilterPropertyUnaryClauseContext filterPropertyUnaryClause() {
			return getRuleContext(FilterPropertyUnaryClauseContext.class,0);
		}
		public FilterPropertyBinaryClauseContext filterPropertyBinaryClause() {
			return getRuleContext(FilterPropertyBinaryClauseContext.class,0);
		}
		public FilterPropertyUnaryFunctionClauseContext filterPropertyUnaryFunctionClause() {
			return getRuleContext(FilterPropertyUnaryFunctionClauseContext.class,0);
		}
		public FilterPropertyBinaryFunctionClauseContext filterPropertyBinaryFunctionClause() {
			return getRuleContext(FilterPropertyBinaryFunctionClauseContext.class,0);
		}
		public SimpleFilterPredicateContext(FilterBasePredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitSimpleFilterPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterBasePredicateContext filterBasePredicate() throws RecognitionException {
		FilterBasePredicateContext _localctx = new FilterBasePredicateContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_filterBasePredicate);
		try {
			setState(117);
			switch (_input.LA(1)) {
			case OPEN_PAREN:
				_localctx = new GroupFilterPredicateContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				match(OPEN_PAREN);
				setState(108);
				filterOrPredicate();
				setState(109);
				match(CLOSE_PAREN);
				}
				break;
			case IDENTIFIER:
				_localctx = new SimpleFilterPredicateContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(111);
					filterPropertyUnaryClause();
					}
					break;
				case 2:
					{
					setState(112);
					filterPropertyBinaryClause();
					}
					break;
				case 3:
					{
					setState(113);
					filterPropertyUnaryFunctionClause();
					}
					break;
				case 4:
					{
					setState(114);
					filterPropertyBinaryFunctionClause();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterPropertyUnaryClauseContext extends ParserRuleContext {
		public Token alias;
		public Token property;
		public Token unaryOperator;
		public List<TerminalNode> IDENTIFIER() { return getTokens(TMQLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(TMQLParser.IDENTIFIER, i);
		}
		public TerminalNode UNARY_COMPARISON_OPERATOR() { return getToken(TMQLParser.UNARY_COMPARISON_OPERATOR, 0); }
		public TerminalNode PROPERTY_FUNCTION() { return getToken(TMQLParser.PROPERTY_FUNCTION, 0); }
		public FilterPropertyUnaryClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterPropertyUnaryClause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TMQLVisitor ) return ((TMQLVisitor<? extends T>)visitor).visitFilterPropertyUnaryClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterPropertyUnaryClauseContext filterPropertyUnaryClause() throws RecognitionException {
		FilterPropertyUnaryClauseContext _localctx = new FilterPropertyUnaryClauseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_filterPropertyUnaryClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((FilterPropertyUnaryClauseContext)_localctx).alias = match(IDENTIFIER);
			setState(120);
			match(T__3);
			setState(121);
			((FilterPropertyUnaryClauseContext)_localctx).property = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==PROPERTY_FUNCTION || _la==IDENTIFIER) ) {
				((FilterPropertyUnaryClauseContext)_localctx).property = (Token)_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(122);
			((FilterPropertyUnaryClauseContext)_localctx).unaryOperator = match(UNARY_COMPARISON_OPERATOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
